# smartwealth-ai-supabase

./: .gitignore  README.md  memory.md  package.json  pnpm-lock.yaml  progress.md  proxy.ts
agents/: .gitignore  README.md  memory.md  progress.md  pyproject.toml  requirements.txt
agents/src/agent_service/: chat.py  config.py  main.py  models.py  run.py  tracing.py
agents/src/agent_service/agent/: build.py  deps.py  model.py  prompts.py  run.py  tracing.py  window.py
agents/src/agent_service/api/: chat.py  deps.py
agents/src/agent_service/core/: __init__.py  context.py  db.py  model.py
agents/src/agent_service/db/: budgets.py  client.py  errors.py  memories.py  profiles.py  transactions.py
agents/src/agent_service/finance/: __init__.py  agent.py  db.py  models.py  prompts.py  tools.py
agents/src/agent_service/gmail/: __init__.py  agent.py  client.py  prompts.py  tools.py
agents/src/agent_service/memory/: __init__.py  agent.py  db.py  prompts.py  tools.py
agents/src/agent_service/router/: __init__.py  agent.py  prompts.py
agents/src/agent_service/tools/: base.py  finance.py  memory.py
app/: globals.css  layout.tsx  page.tsx
app/dashboard/: dashboard-client.tsx  dashboard-data.tsx  layout.tsx  loading.tsx  page.tsx
components/auth/: auth-card.tsx  auth-loading.tsx
components/dashboard/: chat-assistant.tsx  gmail-connection.tsx  realtime-listener.tsx  stat-card.tsx  transaction-modal.tsx
components/layout/: mobile-nav.tsx  nav-items.ts  nav-link.tsx  sidebar.tsx  user-menu.tsx  wordmark.tsx
lib/: motion.ts  utils.ts
types/: supabase.ts
(+46 files in other folders)
